fixed overflow

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   background-color: #010c11;
   font-family: "Poppins", sans-serif;
   color: white;
-  height: 100vh;
+  height: 95vh;
   text-align: center;
 }
 
